2009-09-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/printing.c:
   Fix wrong alignment of printed pages when page headers are
   disabled (closes #2856822).


2009-09-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Free file list memory whilst iterating the list.
   Minor formatting fixes.
 * src/utils.c, src/utils.h:
   Add foreach_dir() API macro.
   Update API docs for utils_get_file_list().
 * wscript, src/queue.c, src/editor.c, src/Makefile.am, src/queue.h,
   po/POTFILES.in:
   Remove queue.[hc] - use GQueue instead of GeanyQueue.
   Beep if there are no more snippet positions.
   Limit length of snippet positions queue to 20.


2009-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/callbacks.c, src/search.c:
   Make Goto Tag commands use the current selection if present (useful
   for selecting part of a tag or for ReST section names with spaces
   in).
 * src/document.c:
   Don't move the cursor when reloading.
 * src/plugindata.h, src/editor.c, src/editor.h:
   Make editor_prefs.snippets hash table private (not a pref).


2009-09-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/main.c:
   Remove deprecated --debug flag. Please use --verbose/-v instead.


2009-09-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Show Find in Files stderr output in messages window instead of
   debug window so that invalid regex messages can be seen easily.
   Combine FIF stdout and stderr callback code.


2009-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Fix opening filenames beginning with two dots (closes #2858487).
 * src/interface.c, src/highlighting.c, src/prefs.c, src/filetypes.c,
   src/filetypes.h, src/main.c, doc/geany.txt, doc/geany.html,
   data/filetypes.common, geany.glade:
   Update syntax highlighting after changing the 'Invert syntax